...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PathsActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="110dp">

            <ImageButton
                android:id="@+id/pathsPageBackButton"
                android:layout_width="30dp"
                android:layout_height="38dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="#00FFFFFF"
                android:tint="@android:color/white"
...
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/path_fromText"
                app:layout_constraintTop_toTopOf="@+id/path_fromText"
                app:srcCompat="@drawable/ic_my_location_24dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/path_toText"
                app:layout_constraintTop_toTopOf="@+id/path_toText"
                app:srcCompat="@drawable/ic_place_white" />

            <TextView
                android:id="@+id/path_fromText"
                android:layout_width="303dp"
...
            android:background="@drawable/rounded_corners"
            app:behavior_hideable="true"
            app:behavior_peekHeight="140dp"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <FrameLayout
                android:id="@+id/path_info_card_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
...
